[package]
name = "flower-pot"
version = "0.1.0"
edition = "2024"
license = "CC0"
description = "A tiny Rust library providing constants and simple functions for ANSI control codes"
repository = "https://github.com/acotis/flower-pot"
readme = "README.md"
keywords = ["ansi", "colors", "terminal"]
categories = ["api-bindings"]

[dependencies]
