[package]
name = "flower-pot"
version = "0.1.2"
edition = "2024"
license = "CC0-1.0"
description = "Provides constants and simple functions for text-styling ANSI control codes"
repository = "https://github.com/acotis/flower-pot"
readme = "README.md"
keywords = ["ansi", "colors", "terminal"]
categories = ["api-bindings"]

[dependencies]
